syntax = "proto3";
package akira.assignment;

import "common.proto";

service Assignment {
    rpc Create(AssignmentMessage) returns (akira.common.OperationId);
    rpc Delete(DeleteAssignmentRequest) returns (akira.common.OperationId);
    rpc List(ListAssignmentsRequest) returns (ListAssignmentsResponse);
}

message DeleteAssignmentRequest {
    string id = 1;
}

message ListAssignmentsRequest {}

message ListAssignmentsResponse {
    repeated AssignmentMessage assignments = 1;
}

message AssignmentMessage {
    string id = 1;
    string host_id = 2;
    string deployment_id = 3;
}
