syntax = "proto3";
package akira.deployment;

import "common.proto";

service Deployment {
    rpc Upsert(DeploymentMessage) returns (akira.common.OperationId);
    rpc Delete(akira.common.DeploymentIdRequest) returns (akira.common.OperationId);
    rpc GetById(akira.common.DeploymentIdRequest) returns (DeploymentMessage);
    rpc GetByTemplateId(akira.common.TemplateIdRequest) returns (ListDeploymentsResponse);
    rpc GetByWorkloadId(akira.common.WorkloadIdRequest) returns (ListDeploymentsResponse);
    rpc List(ListDeploymentsRequest) returns (ListDeploymentsResponse);
}

message ListDeploymentsRequest {}

message ListDeploymentsResponse {
    repeated DeploymentMessage deployments = 1;
}

message DeploymentMessage {
    string          id = 1;
    string          name = 2;
    string          target_id = 3;
    string          workload_id = 4;
    int32           host_count = 5;
    optional string template_id = 6;
}
