syntax = "proto3";
package akira.template;

import "common.proto";

service Template {
    rpc Create(TemplateMessage) returns (akira.common.OperationId);
    rpc Delete(akira.common.TemplateIdRequest) returns (akira.common.OperationId);
    rpc GetById(akira.common.TemplateIdRequest) returns (TemplateMessage);
    rpc List(ListTemplatesRequest) returns (ListTemplatesResponse);
}

message ListTemplatesRequest {}

message ListTemplatesResponse {
    repeated TemplateMessage templates = 1;
}

message TemplateMessage {
    string id = 1;
    string repository = 3;
    string git_ref = 4;
    string path = 5;                     
}