syntax = "proto3";
package akira.workload;

import "common.proto";

service Workload {
    rpc Create(WorkloadMessage) returns (akira.common.OperationId);
    rpc Delete(akira.common.WorkloadIdRequest) returns (akira.common.OperationId);
    rpc GetById(akira.common.WorkloadIdRequest) returns (WorkloadMessage);
    rpc GetByTemplateId(akira.common.TemplateIdRequest) returns (ListWorkloadsResponse);
    rpc List(ListWorkloadsRequest) returns (ListWorkloadsResponse);
}

message ListWorkloadsRequest {}

message ListWorkloadsResponse {
    repeated WorkloadMessage workloads = 1;
}

message WorkloadMessage {
    string id = 1;    
    string name = 2;
    string workspace_id = 3;
    string template_id = 4;
}
